# my-shorelark

./: .gitignore  Cargo.toml  rust-toolchain.toml  shell.nix
app/: Cargo.toml
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: lib.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: lib.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: lib.rs
libs/simulation/src/: animal.rs  brain.rs  eye.rs  lib.rs  world.rs
www/: index.html  index.js  package-lock.json  webpack.config.js
